Slight alignment fix for notification count in android

--- a/css/moveit.scss
+++ b/css/moveit.scss
@@ -50,7 +50,7 @@ body {
 
         .notifications-link {
             position: absolute;
-            top: 5px;
+            top: 7px;
             right: 20px;
             z-index: 99;
             background-color: #FFAB00;
@@ -59,7 +59,7 @@ body {
             }
             .notification-count {
                 position: absolute;
-                top: 4px;
+                top: 3px;
                 left: 0px;
                 display: inline-block;
                 width: 100%;
